--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="text">
                       <span>Call Now !</span>
-                      <strong>+91 9946288884</strong>
+                      <strong ><a href="tel:90724 00900">90724 00900</a></strong>
                     </div>
                   </div>
                 </li>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="text">
                       <span>Email Now</span>
-                      <strong>info@gmail.com</strong>
+                      <strong><a href="mailto:etherealfuels@gmail.com">etherealfuels@gmail.com</a></strong>
                     </div>
                   </div>
                 </li>
@@ -349,16 +349,16 @@
           <div class="col-xl-6 col-lg-6 col-md-12">
             <div class="section-title mb-25">
               <h2>Our Newsletter</h2>
-              <p>Subscribe to get latest update on our products</p>
+              <p>Subscribe to get latest update </p>
             </div>
           </div>
           <div class="col-xl-6 col-lg-6 col-md-12">
-            <form name="ajax-form" id="contact-form4" action="#" method="post" class="contact-form newslater">
+            <div name="ajax-form" id="contact-form4"  class="contact-form newslater">
               <div class="form-group">
-                <input class="form-control" id="email2" name="email" type="email" placeholder="Email Address..." value="" required="">
-                <button type="submit" class="btn btn-custom" id="send2"><i class="fal fa-angle-right"></i></button>
+                <input class="form-control" id="subscribe" name="email" type="email" placeholder="Email Address..." value="" required="">
+                <button type="submit" class="btn btn-custom" id="send2" onclick="senSubscribe()"><i class="fal fa-angle-right"></i></button>
               </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
@@ -432,6 +432,7 @@
                                  <span>Head Of Offcer</span>                                                                  
                               </div>
                            </div>
+
                         </div>
                         <div class="single-testimonial">
                            <p>“Mauris non laoreet eros. Fusce sed varius diam. Ut sapien mauris, fermentum vel porta et, convallis a lacus. Nulla facilisi. Ut vehicula dignissim rutrum configurable but are already optimized”.</p>
@@ -585,15 +586,17 @@
                 <i class="far fa-clock"></i>
               </div>
               <h5>Working Hours</h5>
-              <p>Monday to Friday 09:00 to 18:30 <br>
-                Saturday 15:30</p>
+              <p>Monday to Friday 09:00 to 05:30 <br>
+                Saturday 09:30 to 05:00</p>
             </div>
             <div class="single-cta wow fadeInUp animated" data-animation="fadeInDown animated" data-delay=".2s">
               <div class="f-cta-icon">
                 <i class="far fa-envelope-open"></i>
               </div>
               <h5>Message Us</h5>
-              <p> <a href="#">support@example.com</a><br><a href="#">info@example.com</a></p>
+              <p> <a href="emailto:etherealfuels@gmail.com">etherealfuels@gmail.com</a><br>
+               <!-- <a href="#">info@example.com</a> -->
+            </p>
             </div>
           </div>
         </div>
@@ -660,13 +663,13 @@
                 <ul>
                   <li>
                     <i class="icon fal fa-phone"></i>
-                    <span>9946288884<br>+91-9946288884</span>
+                    <span><a href="https://wa.link/i9xae6">90724 00900</a></span>
                   </li>
                   <li><i class="icon fal fa-envelope"></i>
                     <span>
-                      <a href="mailto:info@example.com">info@example.com</a>
+                      <a href="mailto:etherealfuels@gmail.com">etherealfuels@gmail.com</a>
                       <br>
-                      <a href="mailto:help@example.com">help@example.com</a>
+                      <!-- <a href="mailto:help@example.com">help@example.com</a> -->
                     </span>
                   </li>
 
@@ -760,6 +763,7 @@
     })();
   </script>
   <script src="./email.js"></script>
+  <script src="./subscribe.js"></script>
 
 
   <script src="js/vendor/modernizr-3.5.0.min.js"></script>
