--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Ethreal </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="img/logo/new.png">
   <!-- Place favicon.ico in the root directory -->
   <!-- CSS here -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="text">
                       <span>Call Now !</span>
-                      <strong ><a href="tel:90724 00900">90724 00900</a></strong>
+                      <strong ><a href="tel:9946288884">9946288884</a></strong>
                     </div>
                   </div>
                 </li>
@@ -667,7 +667,8 @@
                 <ul>
                   <li>
                     <i class="icon fal fa-phone"></i>
-                    <span><a href="https://wa.link/i9xae6">90724 00900</a></span>
+                    <span><a href="https://wa.link/i9xae6">90724 00900</a></span><br/>
+                    <span><a href="tel:9946288884">9946288884</a></span>
                   </li>
                   <li><i class="icon fal fa-envelope"></i>
                     <span>
