--- a/index.html
+++ b/index.html
@@ -290,6 +290,19 @@
             <div class="services-active">
               <div class="services-box-05">
                 <div class="services-icon-05">
+                  <img src="images/new1.jpg" alt="icon01">
+                </div>
+                <div class="services-content-05">
+                  <div class="icon">
+
+                    <h4>Fuel Delivery Solutions for Kerala's Industries</h4>
+                  </div>
+                  <p>We specialize in the delivery of fuels to large construction sites, crushers, quarries, and generator companies across Kerala. Our service is reliable, efficient, and tailored to meet the unique needs of each client, ensuring uninterrupted operations and maximum productivity.</p>
+
+                </div>
+              </div>
+              <div class="services-box-05">
+                <div class="services-icon-05">
                   <img src="images/petrolone.jpg" alt="icon01">
                 </div>
                 <div class="services-content-05">
